added images and icons

--- a/css/style.css
+++ b/css/style.css
@@ -676,8 +676,9 @@ blockquote {
 }
 
 .navbar-brand img{
-	float: right;
-	padding: 0 15px;
+	float: left;
+	width: 70%;
+	margin-left: -10px;
 
 }
 
