--- a/css/style.css
+++ b/css/style.css
@@ -359,20 +359,12 @@ blockquote {
 	margin-bottom: 30px;
 }
 
-.parallax1{
-	background: url(../images/parallax/parallax1.jpg) no-repeat;
-}
-
 .parallax2{
-	background: url(../images/parallax/parallax2.jpg) no-repeat;
+	background: url(../images/parallax/Gallery-1.jpg) no-repeat;
 }
 
 .parallax3{
-	background: url(../images/parallax/parallax3.jpg) no-repeat;
-}
-
-.parallax4{
-	background: url(../images/parallax/parallax4.jpg) no-repeat;
+	background: url(../images/parallax/Gallery-7.jpg) no-repeat;
 }
 
 .parallax .btn.solid {
@@ -1580,7 +1572,10 @@ figure.effect-oscar img {
 	-webkit-backface-visibility: hidden;
 	backface-visibility: hidden;
 }
-
+.effect-oscar img{
+	width: 100%;
+	height: 100%;
+}
 figure.effect-oscar figcaption {
 	padding: 2.5em;
 	background-color: rgba(0,0,0,0.1);
