--- a/css/style.css
+++ b/css/style.css
@@ -231,6 +231,8 @@ h5{
 }
 
 .btn.btn-primary.solid:hover{
+	font-weight:900;
+	color:black ;
 	background: none;
 }
 
@@ -464,7 +466,12 @@ blockquote {
 
 
 /* Icon pentagon */
+.icon-close i{
+	display: inline-block;
+	height: 24px;
+	width: 40px;
 
+}
 .icon-pentagon{
 	display: inline-block;
 	height: 24px;
@@ -1572,9 +1579,20 @@ figure.effect-oscar img {
 	-webkit-backface-visibility: hidden;
 	backface-visibility: hidden;
 }
-.effect-oscar img{
+figure.effect-oscar .image-container{
+	position: relative;
+   	width: 100%;
+   	padding-top: 75%;
+}
+figure.effect-oscar img {
+	position: absolute;
+	top: 0;
+	left: 0;
 	width: 100%;
 	height: 100%;
+ }
+.effect-oscar img{
+	width: 100%;
 }
 figure.effect-oscar figcaption {
 	padding: 2.5em;
@@ -1775,15 +1793,14 @@ figure.effect-oscar:hover img {
 	padding: 15px;
 }
 
-/* Team
+/* service
 ================================================== */
 
 .img-hexagon span {
     position: absolute;
     display: block;
     float:left;
-	border-left: 120px solid #fff;
-	border-right: 120px solid #fff;
+	
 }
 
 .img-top {
