--- a/css/main.css
+++ b/css/main.css
@@ -90,6 +90,12 @@
 .blue h1 h2 h3 h4 h5 h6 p span{
     color: #007bff;
 }
-
+/*Google MAP*/
+.row__iframe iframe{
+    width: 100%;
+    height: 60vh;
+    margin-left: auto;
+    margin-right: auto;
+}
 
 
