--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,7 @@ html{
 	position: relative;
 	-webkit-font-smoothing: antialiased;
 	text-rendering: optimizeLegibility;
+	scroll-behavior: smooth;
 }
 
 body{
@@ -67,12 +68,12 @@ body{
 	font-size: 15px;
 	color: #6A6A6A;
 	background: #fff;
+
 }
 
 h1, h2, h3{
 	color: #323232;
 }
-
 .body-inner{
 	position: relative;
 	overflow: hidden;
@@ -1816,8 +1817,8 @@ figure.effect-oscar:hover img {
 }
 
 .img-hexagon {
-    width: 240px;
-    height: 250px;
+    width: 100px;
+    height: 100px;
     position: relative;
     display: inline-block;
 }
@@ -1827,7 +1828,7 @@ figure.effect-oscar:hover img {
 }
 
 
-.team-content h3{
+.team-content h4{
 	margin-bottom: 0;
 	font-size: 20px;
 }
